# inventory-service

./: .env.example  Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_initial_schema.py
docs/api/: openapi.json
docs/schema/: entities.md
scripts/: generate_specs.py
src/: config.py  database.py  dependencies.py  logging_config.py  main.py
src/api/: health.py  router.py
src/api/v1/: products.py  stock.py
src/models/: __init__.py  base.py  product.py  stock.py
src/repositories/: product_repository.py  stock_repository.py
src/schemas/: product.py  stock.py
src/services/: product_service.py  stock_service.py
tests/: conftest.py
tests/integration/: test_observability.py  test_products.py  test_stock.py
